--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -60,14 +60,14 @@
   <!-- ----------------------------------------sponsors------------------------------------------ -->
   <div class="sponsor1 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Jewells Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/uday.png">
+            src="/assests/img/abs jewellery.png">
         </div>
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">ABS Jewellers</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -85,10 +85,10 @@
 
   <div class="sponsor2 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Food Partners</p>
+      <p class="h1">Our Art Partners</p>
       <div class="s2 gap-4">
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Ajay's Cafe</p>
+          <p class="h2">Blush Unisex Salon</p>
           <p class="d-flex text-capitalize fs-5">We are a trusted and leading QSR chain with over 160+ Outlets and 42
             Cities as on 15th February 2024. We are on a mission to serve food that is good, Delicious and accessible to
             all.
@@ -101,21 +101,22 @@
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/ajay.png">
+            src="/assests/img/blush.jpg">
         </div>
       </div>
     </div>
   </div>
+
   <div class="sponsor3 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Marketing Partners</p>
+      <p class="h1">Our Art Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/white logo.png">
+            src="/assests/img/Soni's Both White.png">
         </div>
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Marketing Solver</p>
+          <p class="h2">SONI'S Tattoo & Nails Art Studio</p>
           <p class="d-flex text-capitalize fs-5">In today's fast-paced business landscape, where trends evolve at
             lightning speed and competition is fierce, the value of forging enduring partnerships cannot be overstated.
             At marketingsolver.in, we firmly believe that cultivating long-term relationships with our clients,
@@ -133,7 +134,7 @@
     </div>
   </div>
 
-  <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
+  <!-- <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Fashion Partners</p>
       <div class="s2 gap-4">
@@ -159,8 +160,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
+  </div> -->
+  <!-- <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Hotel Partners</p>
       <div class="s1 gap-4">
@@ -183,9 +184,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
+  <!-- <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Green Partners</p>
       <div class="s2 gap-4">
@@ -208,9 +209,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
+  <!-- <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our City Partners</p>
       <div class="s1 gap-4">
@@ -233,11 +234,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
-  <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
+  <!-- <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Music Partners</p>
       <div class="s2 gap-4">
@@ -260,8 +261,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
+  </div> -->
+  <!-- <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Lunch Partners</p>
       <div class="s1 gap-4">
@@ -284,9 +285,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
+  <!-- <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Eye's Partners</p>
       <div class="s2 gap-4">
@@ -309,7 +310,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- ----------------------------------------footer------------------------------------------ -->
   <footer>
