--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -109,39 +109,18 @@
   </div>
   <div class="teamcontainer">
     <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">Founder</span>
+      <img class="card-img" src="/assests/img/nilay.jpeg" alt="">
+      <h5 class="head-name">Nilay Shah</h5>
     </div>
 
     <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">Co-Founder</span>
+      <img class="card-img" src="/assests/img/bhavik.jpeg" alt="">
+      <h5 class="head-name">Bhavik Shah</h5>
     </div>
 
     <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">CEO</span>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">CFO</span>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">Director</span>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/assests/img/360_F_113462123_n9fPVrYHbfzjua7uuf0tXkwCOELtn64R.jpg" alt="">
-      <h5 class="head-name">John Smith</h5>
-      <span class="role">Manager</span>
+      <img class="card-img" src="/assests/img/shubham.jpeg" alt="">
+      <h5 class="head-name">Shubham Shah</h5>
     </div>
   </div>
 
