--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="/index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active"  aria-current="page" href="/assests/pages/about.html">ABOUT</a>
+            <a class="nav-link active" aria-current="page" href="/assests/pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/assests/pages/gallery.html">GALLERY</a>
@@ -58,26 +58,29 @@
     </div>
   </nav>
   <div class="container-background">
-  <h1 class="name">SIGNIFICANCE OF AVSAR EVENTS</h1>
-  <!-- -----------------------------------------------company---------------------------------------------------------------- -->
-  <div class="company">
-    <div class="img">
-      <img class="about-img" src="/assests/img/Avsar-logo.png" alt="" />
-    </div>
-    <div class="company-info">
-      <span>EVENTS <span class="our">FOR EVERYONE</span></span>
-      <p>
-        One of the most well known dandiya event in <b>Navsari</b> is the <b>Avsar Events Garba.</b> Of the several good
-        reasons, one of the top reason why it attracts so much crowd every year is the perfect combination of good and
-        renowned singers and an excellent, full of live ambiance. It is said that Avsar Events Garba Festival. sees at
-        least 2000 people every night. Isn't it too much? You need to be here to know why this event is so popular and a
-        favorite among so many people. The management of this event makes sure that the arrangements are to the nines
-        and the security is in place. The beautiful fact about this event is that the event was started for a good cause
-        and continues to do so. </p>
+    <h1 class="name">SIGNIFICANCE OF AVSAR EVENTS</h1>
+    <!-- -----------------------------------------------company---------------------------------------------------------------- -->
+    <div class="company">
+      <div class="img">
+        <img class="about-img" src="/assests/img/Avsar-logo.png" alt="" />
+      </div>
+      <div class="company-info">
+        <span>EVENTS <span class="our">FOR EVERYONE</span></span>
+        <p>
+          One of the most well known dandiya event in <b>Navsari</b> is the <b>Avsar Events Garba.</b> Of the several
+          good
+          reasons, one of the top reason why it attracts so much crowd every year is the perfect combination of good and
+          renowned singers and an excellent, full of live ambiance. It is said that Avsar Events Garba Festival. sees at
+          least 2000 people every night. Isn't it too much? You need to be here to know why this event is so popular and
+          a
+          favorite among so many people. The management of this event makes sure that the arrangements are to the nines
+          and the security is in place. The beautiful fact about this event is that the event was started for a good
+          cause
+          and continues to do so. </p>
 
-      ​<br><br>
+        ​<br><br>
 
-      <!-- <p>
+        <!-- <p>
         The money that is raised from this event is given to charitable trusts and organizations all across the city. It
         takes place in <b>ramzaat 2024,</b> <b>Z Farm</b> every year and you need to book your tickets well in advance.
         They have their very own Instagram page and also a website that you can contact for bookings. This event has
@@ -91,40 +94,75 @@
         this good cause at least and do your bit. <b>Avsar Events Garba Festival</b> is best garba and dandiya in
         Navsari.
       </p> -->
+      </div>
+
+
     </div>
 
-    
-  </div>
-
-  <div class="about-gif">
-    <img src="/assests/img/aboutpg.gif" alt="">
-    <img src="/assests/img/ramzat-pg.gif" alt="">
-  </div>
-
-  <!-- ---------------------------------------------------------------------------------------------------------------------- -->
-  <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
-  
-  <div class="team">
-    <span>OUR <span class="ourtm">MEMBERS</span></span>
-  </div>
-  <div class="teamcontainer">
-    <div class="card">
-      <img class="card-img" src="/assests/img/nilay.jpeg" alt="">
-      <h5 class="head-name">Nilay Shah</h5>
+    <div class="about-gif">
+      <img src="/assests/img/aboutpg.gif" alt="">
+      <img src="/assests/img/ramzat-pg.gif" alt="">
     </div>
 
-    <div class="card">
-      <img class="card-img" src="/assests/img/bhavik.jpeg" alt="">
-      <h5 class="head-name">Bhavik Shah</h5>
-    </div>
+    <div class="description container p-5"><p>Avsar Events proudly presents Ramzat 2024, an extraordinary celebration that promises to be the highlight of
+      Navratri in Navsari. This groundbreaking event will take place in the city's first-ever air-conditioned dome,
+      providing a comfortable and luxurious environment for all attendees. Ramzat 2024 is set to make history as
+      Navsari's inaugural A.C dome Garba event, featuring two exclusive pre-Navratri days filled with music, dance, and
+      festive spirit.
+      <br>
+      <br>
 
-    <div class="card">
-      <img class="card-img" src="/assests/img/shubham.jpeg" alt="">
-      <h5 class="head-name">Shubham Shah</h5>
-    </div>
+      Event Details:
+
+      Date: To be announced (including two pre-Navratri days)
+      <br>
+      Venue: Vivanta Garden, Next to ISCKON Temple, Near S S Agarwal College, Alif Nagar, Pratiksha Society, Navsari,
+      Gujarat 396445.
+      <br>
+      <br>
+      Join us at Ramzat 2024 to experience the vibrant energy of Garba like never before. The event promises a
+      mesmerizing blend of tradition and modernity, featuring renowned artists and DJs who will keep you dancing all
+      night long. With state-of-the-art facilities, spectacular lighting, and sound systems, this event is designed to
+      offer an unforgettable celebration of culture and festivity.
+      <br>
+      <br>
+
+      Ramzat 2024 is perfect for families, friends, and Garba enthusiasts of all ages. Enjoy the festive ambiance with
+      beautifully decorated venues, delicious food stalls, and exciting activities for everyone. Whether you're a
+      seasoned Garba dancer or new to the tradition, Ramzat 2024, organized by Avsar Events, is the perfect opportunity
+      to immerse yourself in the joyous celebrations of Navratri in style and comfort.
+      <br>
+      <br>
+
+      Don't miss out on this landmark event that promises to set a new standard for Navratri celebrations in Navsari.
+      Mark your calendars and get ready to experience the magic of Garba at Ramzat 2024!
+    </p>
   </div>
 
- 
+    <!-- ---------------------------------------------------------------------------------------------------------------------- -->
+    <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
+
+    <div class="team">
+      <span>OUR <span class="ourtm">MEMBERS</span></span>
+    </div>
+    <div class="teamcontainer">
+      <div class="card">
+        <img class="card-img" src="/assests/img/nilay.jpeg" alt="">
+        <h5 class="head-name">Nilay Shah</h5>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="/assests/img/bhavik.jpeg" alt="">
+        <h5 class="head-name">Bhavik Shah</h5>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="/assests/img/shubham.jpeg" alt="">
+        <h5 class="head-name">Shubham Shah</h5>
+      </div>
+    </div>
+
+
   </div>
 
   <!-- ----------------------------------------------------Sponsore-------------------------------------------------------------- -->
@@ -204,9 +242,9 @@
       <span class="role"></span>
     </div>
   </div> -->
-</div>
+  </div>
   <!-- ----------------------------------------------------Venue-------------------------------------------------------------- -->
-  
+
 
 
   <!-- ----------------------------------------footer------------------------------------------ -->
@@ -217,9 +255,12 @@
           <span class="logo_name"><img src="/assests/img/Avsar-logo.png" alt="" /></span>
         </div>
         <div class="media-icons">
-          <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i class="fab fa-facebook"></i></a>
+          <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i
+              class="fab fa-facebook"></i></a>
           <a target="on_blank" href="https://www.instagram.com/avsar__events9/"><i class="fab fa-instagram"></i></a>
-          <a target="on_blank" href="https://api.whatsapp.com/send/?phone=9998460101&text&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
+          <a target="on_blank"
+            href="https://api.whatsapp.com/send/?phone=9998460101&text&type=phone_number&app_absent=0"><i
+              class="fab fa-whatsapp"></i></a>
         </div>
       </div>
 
