--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -155,6 +155,16 @@
         <img class="card-img" src="/assests/img/bhavik.jpeg" alt="">
         <h5 class="head-name">Bhavik Shah</h5>
       </div>
+      
+      <div class="card">
+        <img class="card-img" src="/assests/img/tushar.jpeg" alt="">
+        <h5 class="head-name">Tushar Shah</h5>
+      </div>
+      
+      <div class="card">
+        <img class="card-img" src="/assests/img/shreyal.jpg" alt="">
+        <h5 class="head-name">Shreyal Shah</h5>
+      </div>
     </div>
 
 
