--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -70,8 +70,8 @@
           One of the most well known dandiya event in <b>Navsari</b> is the <b>Avsar Events Garba.</b> Of the several
           good
           reasons, one of the top reason why it attracts so much crowd every year is the perfect combination of good and
-          renowned singers and an excellent, full of live ambiance. It is said that Avsar Events Garba Festival. sees at
-          least 2000 people every night. Isn't it too much? You need to be here to know why this event is so popular and
+          renowned singers and an excellent, full of live ambiance. It is said that Avsar Events Garba Festival. See at
+          least 5000 to 6000 people every night. Isn't it too much? You need to be here to know why this event is so popular and
           a
           favorite among so many people. The management of this event makes sure that the arrangements are to the nines
           and the security is in place. The beautiful fact about this event is that the event was started for a good
@@ -113,8 +113,8 @@
       <br>
 
       Event Details:
-
-      Date: To be announced (including two pre-Navratri days)
+<br><br>
+      Date: 3<sup>rd</sup> October to 12<sup>th</sup> October 2024 ( <span style="color: red;">1<sup>st</sup> October pre navratri with exclusive singer.</span> )
       <br>
       Venue: Vivanta Garden, Next to ISCKON Temple, Near S S Agarwal College, Alif Nagar, Pratiksha Society, Navsari,
       Gujarat 396445.
