--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -50,7 +50,7 @@
             <a class="nav-link" href="/assests/pages/contact.html">CONTACTS</a>
           </li>
         </ul>
-        <a class="button type1 m-lg-auto m-auto" href='/assests/pages/booking.html'>
+        <a class="button type1 m-lg-auto m-auto" href='https://www.mepass.in/events/ramzat-2024'>
           <span class="btn-txt">Get Pass</span>
         </a>
       </div>
