--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link" href="/assests/pages/contact.html">CONTACTS</a>
           </li>
         </ul>
-        <a class="button type1 mb-lg-auto m-auto" href="assests/pages/booking.html">
+        <a class="button type1 mb-lg-auto m-auto" href="https://www.mepass.in/events/ramzat-2024">
           <span class="btn-txt">Get Pass</span>
         </a>
       </div>
@@ -127,7 +127,7 @@
               and celebration. Get your Passes today!
             </p>
             <a class="bookbtn col-12 position-relative bottom-0 start-50 translate-middle-x rounded-5"
-              href='assests/pages/booking.html' type="button">
+              href='https://www.mepass.in/events/ramzat-2024' type="button">
               Book Now
             </a>
           </div>
