--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -85,7 +85,7 @@
 
   <div class="sponsor2 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Art Partners</p>
+      <p class="h1">Our Salon Partners</p>
       <div class="s2 gap-4">
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Blush Unisex Salon</p>
