--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -58,13 +58,41 @@
     </div>
   </nav>
   <!-- ----------------------------------------sponsors------------------------------------------ -->
+  <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5"></div>
+  <div class="container">
+    <p class="h1">Our Title Sponsor</p>
+    <div class="s2 gap-4">
+      <div class="spons-para row content col-lg-6 col-md-6 col-12">
+        <p class="h2">Transit Developer PVT. LTD.</p>
+        <p class="d-flex text-capitalize fs-5">A heartfelt thank you to Transit Developer Pvt. Ltd. for being the title
+          sponsor of Ramzat 2024. Your support is instrumental in making this Navratri celebration a success. We deeply
+          appreciate your commitment to our cultural heritage and look forward to a fantastic event together! Your
+          support plays a vital role in bringing this Navratri celebration to life and helping us create a vibrant,
+          unforgettable event.
+          <br>
+          <br>
+          Transit Developer Pvt. Ltd.'s commitment to community and cultural heritage aligns perfectly with the spirit
+          of Navratri, and we are thrilled to have them as our partner. Their generosity and belief in our vision make
+          this event possible, and we look forward to an amazing festival together.
+
+          Thank you once again to Transit Developer Pvt. Ltd. for your invaluable support!
+        </p>
+      </div>
+      <div class="row img col-lg-6 col-md-6 col-12">
+        <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+          src="/assests/img/transit.jpg">
+      </div>
+    </div>
+  </div>
+  </div>
+
   <div class="sponsor1 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Real-Estate Partners</p>
+      <p class="h1">Our Venue Partner</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
-          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/vivanta logo.png">
+          <img class="col-lg-12 col-md-12 col-sm-12 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/Vivanta Logo.pdf.png">
         </div>
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Vivanta</p>
@@ -231,16 +259,16 @@
     </div>
   </div>
 
-  <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
+  <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Art Partners</p>
+      <p class="h1">Our Food Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/Soni's Both White.png">
+            src="/assests/img/nutritius logo.jpg">
         </div>
         <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">SONI'S Tattoo & Nails Art Studio</p>
+          <p class="h2">Nutritius Chikki</p>
           <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
             and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
             custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
@@ -258,6 +286,65 @@
       </div>
     </div>
   </div>
+
+  <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Art Partners</p>
+      <div class="s1 gap-4">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">SONI'S Tattoo & Nails Art Studio</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/Soni's Both White.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Build Partner</p>
+      <div class="s1 gap-4">
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/steel logo.jpg">
+          </div>
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Steel Build</p>
+          <p class="d-flex text-capitalize fs-5">Blush Unisex Salon is the ultimate destination for those seeking
+            exceptional hair and beauty services.Catering to both men and women, Blush offers a comprehensive range of
+            services including haircuts, styling,coloring, skincare treatments, and grooming. With a team of highly
+            skilled professionals, the salon is dedicated to providing personalized and contemporary services that cater
+            to the unique needs and preferences of each client.
+            <br>
+            <br>
+            At Blush Unisex Salon, the focus is on delivering a luxurious and relaxing experience. The salon's chic and
+            modern ambiance, combined with the use of top-quality products, ensures that every visit is a rejuvenating
+            escape. Whether you're looking for a fresh haircut, a rejuvenating facial, or a complete makeover, Blush
+            Unisex Salon promises to enhance your natural beauty and leave you feeling confident and stylish.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+
 
   <!-- <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
@@ -363,30 +450,7 @@
 
 
 
-  <!-- <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
-    <div class="container">
-      <p class="h1">Our Music Partners</p>
-      <div class="s2 gap-4">
-        <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Crazy Beats</p>
-          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
-            <br>
-            <br>
-            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
-            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
-            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
-            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
-            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.
-          </p>
-        </div>
-        <div class="row img col-lg-6 col-md-6 col-12">
-          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/beats.jpeg">
-        </div>
-      </div>
-    </div>
-  </div> -->
+  <!--  -->
   <!-- <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Lunch Partners</p>
