--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <P class="heading h1">Get Your Pass Now</P>
         <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
           <div class="pass col-12 col-lg-9 col-md-8">
-            <video class="rounded-4 col-12" src="assests/video/garba pass.mp4" autoplay muted loop>
+            <video class="rounded-4 col-12" src="assests/video/Pre-Navratri Pass.mp4" autoplay muted loop>
           </div>
           <div
             class="booking-pass d-block align-content-center position-relative rounded-4 col-lg-3 col-md-4 p-lg-3 p-2">
