--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -343,8 +343,92 @@
     </div>
   </div>
 
-  
+  <hr>
 
+  <div class="sponsor11 box p-lg-5 p-md-5 p-sm-5"></div>
+    <div class="container">
+      <p class="h1">Our Food Partner</p>
+      <div class="s1 gap-4">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Neo Politan Italian Pizza</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/neo logo.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+  
+    <div class="sponsor12 box p-lg-5 p-md-5 p-sm-5">
+      <div class="container">
+        <p class="h1">Our Builder Partner</p>
+        <div class="s1 gap-4">
+          <div class="row img col-lg-6 col-md-6 col-12">
+            <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+              src="/assests/img/opera logo.jpg">
+            </div>
+          <div class="spons-para row content col-lg-6 col-md-6 col-12">
+            <p class="h2">Opera Builder Developer</p>
+            <p class="d-flex text-capitalize fs-5">Blush Unisex Salon is the ultimate destination for those seeking
+              exceptional hair and beauty services.Catering to both men and women, Blush offers a comprehensive range of
+              services including haircuts, styling,coloring, skincare treatments, and grooming. With a team of highly
+              skilled professionals, the salon is dedicated to providing personalized and contemporary services that cater
+              to the unique needs and preferences of each client.
+              <br>
+              <br>
+              At Blush Unisex Salon, the focus is on delivering a luxurious and relaxing experience. The salon's chic and
+              modern ambiance, combined with the use of top-quality products, ensures that every visit is a rejuvenating
+              escape. Whether you're looking for a fresh haircut, a rejuvenating facial, or a complete makeover, Blush
+              Unisex Salon promises to enhance your natural beauty and leave you feeling confident and stylish.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="sponsor13 box p-lg-5 p-md-5 p-sm-5">
+      <div class="container">
+        <p class="h1">Our Fashion Partner</p>
+        <div class="s1 gap-4">
+          <div class="spons-para row content col-lg-6 col-md-6 col-12">
+            <p class="h2">Sheetal's Creations</p>
+            <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+              and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+              custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+              individuality through stunning, personalized art. The studio features a team of talented artists who are
+              passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+              <br>
+              <br>
+              At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+              clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+              hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+              looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+              delivering exceptional artistry that you can proudly wear.
+            </p>
+          </div>
+          <div class="row img col-lg-6 col-md-6 col-12">
+            <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+              src="/assests/img/sheetal logo.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
 
   <!-- <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
